dev:
  * add demean option (before filtering)
  * add plugin option for timenorm
  * refactor timenorm function, some kwargs are deprecated
  * add dpi option for most plots to set resolution of saved images
  * more verbose error message if coordinates of station cannot be found
  * fix: guarantee same length of traces which are correlated (necessary if tolerance_shift is set)
v0.4.2:
  * adapt to GFZ FDSN webservices and allow only 1 thread when downloading example data
v0.4.1:
  * extension of images is now specified without dot, e.g. 'png', 'pdf'
v0.4.0:
  * rename plotting options setting x- and y-limits to xlim and ylim
  * parallel processing for stretching, reference trace must be used (--reftr)
  * allow full stack with '' or 'all' (e.g. for creating a refence trace)
  * parallel processing for full stack
  * store correlations and sim_mat as half precission float16 by default
  * fix various small bugs
  * move some functions to new io module
v0.3.0:
  * add scan subcommand
  * add debug option (--pdb)
  * add exhaustive online documentation
  * add possibility to correlate "R" and "T" rotated components (experimental)
  * add --parallel-inner-loop feasible for correlating many stations
  * downsample now performed before preprocessing
  * add decimate option (downsampling after preprocessing)
  * reduce run time of tests
  * fix: timenorm "clip" was not correctly working
  * fix: timenorm "mute_envelope" was not working with masked data
v0.2.1:
  * refactor part of the imaging module
  * rename some kwargs in imaging module
v0.2.0:
  * rename read_stretch to read_dicts
  * remove unnecessary "root" group in HDF5 files
  * change stretch to velocity change inside dictionary returned by read_stretch (sign change)
  * change unit of velocity change and str_range to %
  * corr_vs_time plot: allow to plot stack at top
  * allow strings for length and overlap option in correlate config (e.g. "1h" for one hour)